# back/modules/generated/app/be/frol/chaman/openapi/model/Field.scala
@@ -5,6 +5,7 @@ import play.api.libs.json._
 /**
   * Represents the Swagger definition for Field.
   * @param uuid single uuid acrross all version of the field
+  * @param isUserField true if the field is user defined false if its a deault field
   */
 @javax.annotation.Generated(value = Array("org.openapitools.codegen.languages.ScalaPlayFrameworkServerCodegen"))
 case class Field(
@@ -14,7 +15,8 @@ case class Field(
   inputType: Option[String],
   value: Option[List[FieldValue]],
   params: Option[JsValue],
-  errorMessages: Option[List[String]]
+  errorMessages: Option[List[String]],
+  isUserField: Option[Boolean]
 )
 
 object Field {
